--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Try to build a slippy map similar to the one built earlier with OpenLayers",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack-dev-server --open --config webpack.config.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,10 @@
   },
   "homepage": "https://github.com/imdataman/mapbox-density-map#readme",
   "dependencies": {
-    "mapbox-gl": "^1.5.1"
+    "d3-queue": "^3.0.7",
+    "d3-request": "^1.0.6",
+    "mapbox-gl": "^1.5.1",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "webpack": "^4.41.2",
